--- a/index.html
+++ b/index.html
@@ -173,44 +173,6 @@
           height: 140px;
         }
       }
-      #message h3 {
-        font-size: 1.5rem;
-        margin-bottom: 10px;
-      }
-      #message p {
-        font-size: 1rem;
-        line-height: 1.6;
-        color: #f0f0f0;
-      }
-      #message {
-        background: #001f3f;
-        color: #fff;
-        padding: 50px 10%;
-        display: flex;
-        align-items: center;
-        gap: 50px;
-      }
-      #message img {
-        width: 200px;
-        height: 200px;
-        border-radius: 50%;
-        box-shadow: 0 10px 15px rgba(255, 0, 0, 0.5);
-        object-fit: cover;
-      }
-      #message div {
-        flex: 1;
-      }
-      #message h3 {
-        font-size: 1.8rem;
-        margin-bottom: 15px;
-        font-weight: 700;
-        color: #d40000;
-      }
-      #message p {
-        font-size: 1.1rem;
-        line-height: 1.8;
-      }
-      
     </style>
   </section>
 
@@ -496,6 +458,100 @@
     </div>
 
   </footer>
+  <style>
+   
+
+    @media screen and (max-width: 1200px) {
+      #section2, #about {
+        padding: 30px 10%;
+      }
+    }
+
+    @media screen and (max-width: 900px) {
+      nav .logo {
+        font-size: 1.3rem;
+        margin-right: 15px;
+      }
+      nav ul {
+        gap: 10px;
+        padding-right: 10px;
+      }
+      #section2, #about {
+        flex-direction: column;
+        padding: 30px 5%;
+        gap: 20px;
+      }
+      #about img, #section2 img {
+        max-width: 100%;
+        margin-bottom: 20px;
+      }
+   
+
+    @media screen and (max-width: 600px) {
+      nav {
+        flex-direction: column;
+        padding: 10px 0;
+      }
+      nav ul {
+        flex-direction: column;
+        align-items: center;
+        gap: 0;
+        padding: 0;
+      }
+      nav ul li {
+        margin: 10px 0;
+      }
+      nav ul li a {
+        font-size: 1.1rem;
+      }
+      .logo {
+        font-size: 1.1rem;
+        margin: 0 0 10px 0;
+      }
+      #features > div {
+        flex-direction: column;
+      }
+      .logos-container img {
+        width: 60px;
+        height: 40px;
+      }
+      footer {
+        flex-direction: column;
+        text-align: center;
+        padding: 30px 5%;
+      }
+      footer img {
+        margin-bottom: 20px;
+        max-width: 90vw;
+      }
+    }
+
+    @media (max-width: 450px) {
+      #places img, #places .flex img {
+        width: 100% !important;
+        max-width: 100vw !important;
+        height: auto !important;
+      }
+      .circle-orbit {
+        width: 170px;
+        height: 170px;
+      }
+      .circle-main {
+        width: 70px;
+        height: 70px;
+      }
+      .circle-main img {
+        width: 40px;
+        height: 40px;
+      }
+      .circle-img {
+        width: 40px;
+        height: 40px;
+        font-size: 0.7rem;
+        padding: 2px;
+      }
+    }
+  </style>
 
 
 </body>
